[Bug 760517] [ko] Translate Whats New page for Firefox 13 + vido - minor fixes
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106031 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ko/whatsnew.lang
+++ b/ko/whatsnew.lang
@@ -38,11 +38,11 @@ Firefox 예전 버전을 사용중입니다.
 
 
 ;Keep in touch
-연락하기
+구독하기
 
 
 ;Keep it moving
-움직이기
+무료 다운로드
 
 
 ;Get Firefox » <b>for Android</b>
@@ -50,7 +50,7 @@ Firefox 다운르도 » <b>안드로이드용</b>
 
 
 ;Keep it going
-앞서가기
+참여하기
 
 
 ;Join Mozilla
