--- a/is/whatsnew.lang
+++ b/is/whatsnew.lang
@@ -2,11 +2,11 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Húrra! Firefox er í nýjustu útgáfu.
+Húrra! Firefox hjá þér er í nýjustu útgáfu.
 
 
 ;Your Firefox is out of date.
-Firefox er ínýjustu útgáfu.
+Firefox hjá þér er úreld.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
