Minor language improvement
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106042 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/is/whatsnew.lang
+++ b/is/whatsnew.lang
@@ -6,7 +6,7 @@ Húrra! Firefox hjá þér er í nýjustu útgáfu.
 
 
 ;Your Firefox is out of date.
-Firefox hjá þér er úreld.
+Firefox hjá þér er úreldur.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
