--- a/ach/snippets.lang
+++ b/ach/snippets.lang
@@ -1,6 +1,3 @@
-# these text snippets are mostly used on about:home
-
-
 ;Take Firefox anywhere you go! The latest Firefox for Android is live and ready for you to enjoy. <a href="%s">Get it now</a>.
 Ter Firefox kan mo keken ma in ibi ceto ie! Firefox ma okati macok coki manyen pi Anroid tye makome ci tye atera piri me nongo yom cwiny ie. <a href="%s">Nong ne kombedi</a>.
 
@@ -118,14 +115,12 @@ Lwony luwoti me neno odoco kit Firefox matye kabino. <a href="%">Kube Kwede</a> 
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Tic ki Firefox   ikom komiuta mapol? Itwero Itwero keto gin marwata patpat kombedi imed ikom megi kun beo iwi gin weng.<a href="%">Nong yore me miyo tic Sync.</a>
+Tic ki Firefox ikom komiuta mapol? Itwero Itwero keto gin marwata patpat kombedi imed ikom megi kun beo iwi gin weng.<a href="%">Nong yore me miyo tic Sync.</a>
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Oyot, oyot, oyot. <a %s>Firefox me Android tye ki rwom ma lamal atika</a>. Kony wa i lal lok.
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
 Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-
-
