Update last message
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106044 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ach/upgradedialog.lang
+++ b/ach/upgradedialog.lang
@@ -87,4 +87,4 @@ Keto yilo rwom me<a %s>operating system mamegi</a>
 
 
 ;You will be prompted once more before being automatically updated.
-You will be prompted once more before being automatically updated.
+In obi icel ikare macoki mapwud pe gi mino ngec manyen matime kene.
