updated latvian translation
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106049 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/lv/newsletter.lang
+++ b/lv/newsletter.lang
@@ -162,7 +162,7 @@ Ziņojumu dizainu bija pārāk grūti lasīt.
 
 
 ;I didn't sign up for this.
-Es nemaz nepieteicos uz šīm zinām.
+Es nemaz nepieteicos uz šīm ziņām.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
@@ -178,18 +178,18 @@ Paldies, ka izstāstījāt, kāpēc aizejat.
 
 
 ;Mozilla Newsletters
-Mozilla Newsletters
+Mozilla jaunumi
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Thanks! Please check your inbox to confirm your subscription.
+Paldies! Lūdzu, pārbaudi savu pasta kasti, lai apstiprinātu pieteikšanos jaunumiem.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+Jūs saņemsiet epastu no mozilla@e.mozilla.org, lai apstiprinātu pieteikšanos jaunumiem. Ja neredzat šo epastu, pārbaudiet mēstuļu mapi. Lai saņemtu jaunumus, jāapstiprina pieteikšanās uz tiem.
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
+Lūdzu pārliecinieties, ka vēstules, kas tiek sūtītas no mozilla@e.mozilla.org spēj nonākt jūsu pasta kastē.
 
 
