--- a/lv/whatsnew.lang
+++ b/lv/whatsnew.lang
@@ -2,62 +2,62 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+Urrā! Jums ir pats svaigākais Firefox.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+Jūsu Firefox ir novecojis.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+Drošības nolūkos, iesakām atjaunināties uz <a href="{url}">jaunāko un labāko versiju</a>.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+Jūs izmantojat nezināmu Firefox versiju.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+Drošības nolūkos, iesakām lejupielādēt uz <a href="{url}">jaunāko un labāko versiju</a>.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+Paveiciet nākamo darbu<br/>ātrāk kā jebkad
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+Uzziniet, kā jaunās pārlūka iespējas palīdz Jums būt ātrākiem un efektīgājiem.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+Uzziniet vairāk par <a href="{url}">jaunajām cilnēm »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+Uzziniet vairāk par mūsu <a href="{url}">jauno sākuma lapu »</a>
 
 
 ;Keep in touch
-Keep in touch
+Nepazaudējiet saikni
 
 
 ;Keep it moving
-Keep it moving
+Turpiniet kustēties
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+Iegūstiet Firefox » <b>Android ierīcēm</b>
 
 
 ;Keep it going
-Keep it going
+Lai tā lieta iet uz priekšu
 
 
 ;Join Mozilla
-Join Mozilla
+Pievienojieties Mozilla
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
+Android robots ir izveidots no <a href="%s">Google resursiem</a> un tiek izmantots atbilstoši <a href="%s">Creative Commons 3.0 Attribution Licences</a> nosacījumiem.
 
 
