--- a/lv/snippets.lang
+++ b/lv/snippets.lang
@@ -126,6 +126,6 @@ Izmanto Firefox no vairākiem datoriem? Tagad Tu vari sinhronizēt papildinājum
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox jaunās iespējas palīdz katru nākamo darbu paveikt ātrāk! <a href="%">Iečeko video un uzzini vairāk.</a>
 
 
