--- a/lv/videos/video_fx13.lang
+++ b/lv/videos/video_fx13.lang
@@ -1,42 +1,43 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[Kas jauns Firefox] Ar jauno Firefox jūs vēlamajā vietā varat nokļūt ātrāk un ērtāk kā jebkad.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+Pateicoties pārveidotajai sākuma lapai, jūs varat ļoti vienkārši atvērt biežāk izmantotos izvēlnes elementus.
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+Piemēram, lejupielādes, grāmatzīmes, vēsturi, papildinājumus, sinhronizāciju vai iestatījumus.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[Jaunas cilnes lapa] Mēs uzlabojām arī jaunas cilnes lapu.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+Jaunas cilnes lapā jūs varat viegli pāriet uz biežāk apmeklētajām lapām ar viena klikšķa palīdzību.
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+Lai sāktu izmantot Jaunas cilnes lapu, atveriet jaunu cilni, nospiežot uz '+' pārlūka augšpusē.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+Jaunas cilnes lapā būs redzamas bildītes ar biežāk apmeklētajām lapām. Šīs ir lapas no jūsu Foršās joslas vēstures.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+Jūs varat pielāgot jaunas cilnes lapu pārvelkot bildītes tā kā jums patīk.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+Klikšķiniet uz piespraudes, lai iesaldētu bildītes pozīciju vai izmantojiet 'X' pogu, lai aizvāktu lapu.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+Jūs varat uzklikšķināt arī uz 'režģa' ikonas augšējā labajā stūrī, lai atgrieztos pie tukšas jaunās cilnes lapas.
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+Paņemiet jaunāko Firefox un izmantojiet jaunākās iespējas jau tūlīt pat!
+
