Scots Gaelic: 100% translated
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106051 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/gd/firefoxtesting.lang
+++ b/gd/firefoxtesting.lang
@@ -11,7 +11,7 @@ Luchdaich a-nuas is cuir Firefox fo dheucheainn a tha ri sgaoileadh san àm ri t
 
 
 ;Firefox Beta
-Firefox Beta 
+Firefox Beta {ok}
 
 
 ;Firefox Beta for:
