--- a/gd/main.lang
+++ b/gd/main.lang
@@ -43,7 +43,7 @@ Na deuchainn-lannan
 
 
 ;skip to Navigation
-thoir leum dhan t-seòladh
+thoir leum dhan t-seòladaireachd
 
 
 ;switch language
@@ -91,7 +91,7 @@ Cànain eile:
 
 
 ;All rights reserved.
-Gach còir air a ghlèidheadh
+Gach còir air a ghlèidheadh.
 
 
 ;Legal Notices
@@ -135,7 +135,7 @@ Cuidich sinn gus Firefox a dhèanamh nas fhearr fhathast!
 
 
 ;Take a few moments to take a quick survey and share your thoughts with us.
-Saoil a bheil mionaid again gus suirbhidh bheag a lìonadh is do bheachdan a thoirt dhuinn?
+Saoil a bheil mionaid againn gus suirbhidh bheag a lìonadh is do bheachdan a thoirt dhuinn?
 
 
 ;Close
@@ -159,7 +159,7 @@ Bu chòir dhut <a href="http://get.adobe.com/flashplayer/">Adobe Flash Player ù
 
 
 ;Firefox is up to date, but your current version of Flash Player can cause security and stability issues.  Please <a href="http://get.adobe.com/flashplayer/">install the free update</a> as soon as possible.
-Tha Firefox cho ùr 's a ghabhas ach faodaidh an tionndadh de dh'Fhlash Player a tha agad cùisean tèarainteachd is seasmhachd adhbharachadh. Feuch is <a href="http://get.adobe.com/flashplayer/">an stàlaich thu an t-ùrachadh saor an-asgaidh</a> cho luath 's a ghabhas.
+Tha Firefox cho ùr 's a ghabhas ach faodaidh an tionndadh de dh'Fhlash Player a tha agad cùisean tèarainteachd is seasmhachd adhbharachadh.  Feuch is <a href="http://get.adobe.com/flashplayer/">an stàlaich thu an t-ùrachadh saor an-asgaidh</a> cho luath 's a ghabhas.
 
 
 ;Features
@@ -259,7 +259,7 @@ Fòrmat Ogg Theora
 
 
 ;MPEG-4 format
-Fòrmat MPEG
+Fòrmat MPEG-4
 
 
 ;Whoops! Be sure to enter a valid email address.
@@ -315,7 +315,7 @@ Feuch ri lìon an ama ri teachd an-diugh fhèin.
 
 
 ;Check out the new look and feel of Firefox.
-Thoir sùil air an dreach ùr snasail a tha air Firefox
+Thoir sùil air an dreach ùr snasail a tha air Firefox.
 
 
 ;Browse the future of the Web.
