--- a/gd/mobile.lang
+++ b/gd/mobile.lang
@@ -95,7 +95,7 @@ Saoirse on taidhpeadh
 
 
 ;The Awesome Screen learns your favorite sites so you can browse with little or no typing.
-Ionnsaichidh an sàr-sgrìn dè na làraichean as fhearr leat agus leis a sin, bidh cothrom agan an ruigsinn air nas lugha de thaidhpeadh no fiù gun taidhpeadh sam bith.
+Ionnsaichidh an sàr-sgrìn dè na làraichean as fhearr leat agus leis a sin, bidh cothrom agad an ruigsinn air nas lugha de thaidhpeadh no fiù gun taidhpeadh sam bith.
 
 
 ;Best of both worlds
