--- a/gd/newsletter.lang
+++ b/gd/newsletter.lang
@@ -1,6 +1,3 @@
-# These strings are used for subscription forms in pages footers, as well as on http://www-dev.allizom.org/newsletter and http://www-dev.allizom.org/es-ES/newsletter/new
-
-
 ;Get Monthly News
 Faigh na naidheachdan gach mìos
 
@@ -46,7 +43,7 @@ Gun robh math agad airson fo-sgrìobhadh!
 
 
 ;We look forward to soon begin sharing tips &amp; tricks on getting the most out of Firefox, as well as exciting news about Mozilla and how we’re working to create a better Web.
-Tha dùil againn gliocasan ┐ gleusan a sgaoilean a dh'aithghearr leis an cuir thu Firefox gu làn fheum. Agus a bharrachd air sin, gheibh thu naidheachdan inntinneach mu Mozilla agus an obair a nì sinn gus lìon nas fhearr a chruthachadh.
+Tha dùil againn gliocasan ┐ gleusan a sgaoileadh a dh'aithghearr leis an cuir thu Firefox gu làn fheum. Agus a bharrachd air sin, gheibh thu naidheachdan inntinneach mu Mozilla agus an obair a nì sinn gus lìon nas fhearr a chruthachadh.
 
 
 ;Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
@@ -178,18 +175,16 @@ Mòran taing son innse dhuinn carson a tha thu a' fàgail.
 
 
 ;Mozilla Newsletters
-Mozilla Newsletters
+Cuairt-litrichean Mozilla
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Thanks! Please check your inbox to confirm your subscription.
+Gun robh math agad! Thoir sùil air a' bhogsa phuist agad is dearbh am fo-sgrìobhadh agad.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+Gheibh thu post-d o mozilla@e.mozilla.org gus am fo-sgrìobhadh agad a dhearbhadh. Mur fhaic thu e, thoir sùil air a' chriathrag spama agad. Feumaidh tu am fo-sgrìobhadh a dhearbhadh mus fhaigh thu a' chuairt-litir againn.
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-
-
+B' fheairrde dhut an seòladh on dig e, mozilla@e.mozilla.org, a chur ri leabhar nan seòladh agad ach am faigh thu e gun teagamh sam bith.
