--- a/gd/videos/video_fx13.lang
+++ b/gd/videos/video_fx13.lang
@@ -1,42 +1,42 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[Na tha ùr ann am Firefox] Ruigidh am Firefox as ùire do cheann-uidhe nas luaithe agus air dòigh nas fhasa a-nis.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+Chaidh an duilleag-mhòr ath-dhealbhadh agus tha e nas fhasa a-nis cothrom fhaighinn air na pìosan dhen chlàr-taice a chleachdas tu gu tric.
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+Can na luchdaich thu a-nuas, na comharran-lìn, an eachdraidh, na tuilleadain, an sioncronachadh 's na roghainnean.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[Duilleag taba ùr] Leasaich sinn duillean nan tabaichean ùra cuideachd.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+Tha e furasta le duilleag nan tabaichean ùra cothrom fhaighinn air na làraichean a thadhail thu orra gu tric o chionn goirid le aon bhriogadh.
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+Ma tha thu airson duilleag nan tabaichean ùra a chleachdadh, cruthaich taba 's tu a' briogadh air a + aig barr a' bhrabhsair agad.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+Chì thu dealbhagan dhe na làraichean-lìn air an do thadhail thu gu tric o chionn goirid (stèidhichte air eachdraidh an t-sàr-bhàir agad) air duilleag nan tabaichean ùra.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+'S urrainn dhut duilleag nan tabaichean ùra a ghnàthachadh ma shlaodas tu mun cuairt iad.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+Briog air a' phrìne gus làrach a ghlasadh san ìate sin no air an X gus làrach a thoirt air falbh.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+'S urrainn dhut briogadh air a' ghriod bheag aig barr na duilleige air an làimh dheas gus duilleag bhàn nan tabaichean ùra a ruigsinn.
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+Faigh greim air a' Firefox as ùire an-dràsta 's faigh cothrom air na feartan ùra seo an-diugh!
