--- a/eo/whatsnew.lang
+++ b/eo/whatsnew.lang
@@ -46,7 +46,7 @@ Kunmoviĝu
 
 
 ;Get Firefox » <b>for Android</b>
-Ricevu Firefox » <b>por Android</b>
+Ricevi Firefox » <b>por Android</b>
 
 
 ;Keep it going
