--- a/ff/snippets.lang
+++ b/ff/snippets.lang
@@ -126,6 +126,6 @@ Njaawee, njaawee, njaawee. <a %s>Firefox mo Android heɓii kesɗitinal mawngal</
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox ena jogii fannuuji kesi ngam siynude golle maa no yaawiri! <a href="%">Ƴeew ngol lefol widewoo ngam ɓeydude humpito.</a>
 
 
