--- a/ff/videos/video_fx13.lang
+++ b/ff/videos/video_fx13.lang
@@ -1,42 +1,42 @@
-;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+﻿;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[Hol ko hesɗi e Firefox] Jooni ɓeydiima weeɓde e yaawde yettaade ɗo njiɗ-ɗaa yahde huutoraade Firefox keso oo.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+Hello jaɓɓorgo ngoo feewnitaama ngam mbaawaa heɓde e feeraade e nder dosi ɗi ɓur-ɗaa heewde huutoraade.
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+Wano gaawte, maantore, aslol, ɓeyditte, sync e teelte.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[Hello Tabbere Hesere] Min ɓeydii kadi moƴƴinde hello Tabbe maa Heso ngoo.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+Huutoraade hello tabbe heso ngoo, aɗa waawi feeraade no weeɓirta e lowe maa cakkitiiɗe yilleede e ɗe ɓur-ɗaa heewde yillaade.
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+Ngam fuɗɗaade huutoraade hello Tabbere Hesere ngoo, sos tabbere hesere so dobaade e '+' to dow wanngorde maa toh.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+Hello Tabbere Hesere ndee jooni maa jaytin dooɓe lowe maa cakkiti-ɗaa yillaade e ɗe ɓur-ɗaa heewde yillaade iwde e Palal Yontaaɓe maa ngal.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+Aɗa waawi heertinde hello Tabbere Hesere ngoo so daasde dooɓe ɗee ngam dirtinde-ɗe walla waylude leemdu nduu.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+Dobo e ƴedoɗe ɗee ngam sokde lowre ɗo ƴiɓii ɗoo, walla dobo e 'X' ngam momtude lowre.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+Aɗa waawi kadi dobaade e maanndel 'tigilde' gonngel dow bannge ñaamo hello ngoo ngam ruttaade to hello Tabbere hesere meho ngoo.
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+Heɓ Firefox ɓurɗo hesɗude jooni kisa puɗɗo-ɗaa huutoraade ɗii fannuua kesi hannde!
