--- a/ff/whatsnew.lang
+++ b/ff/whatsnew.lang
@@ -2,62 +2,62 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+Haayoo! Firefox maa hesɗitii.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+Firefox maa ko kiituɗo.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+Ngam ɓeydude kisal, amin mbasiyoo nde kesɗitintaa ngam heɓde <a href="{url}">yamre sakkitiinde e ɓurnde yuɓɓude</a>.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+Yamre Firefox dogoore e ngaaandi maa ndee anndaaka.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+Ngam ɓeydude kisal, amin mbasiyoo nde ngaawtoto-ɗaa <a href="{url}">yamre sakkitiinde e ɓurnde yuɓɓude</a>.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+Jooni golle maa <br/>ɓeydoo yaawde
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+Ƴeew no fannuuji kesi Firefox mballirtu-maa feeraade jaawngol e ittungol.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+Ɓeydu humpito baɗte <a href="{url}">fannu Tabbere Hesere oo</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+Ɓeydu humpito baɗte <a href="{url}">hello jaɓɓorgo feewnitaango ngoo</a>
 
 
 ;Keep in touch
-Keep in touch
+Ɓeydu jokkondiral
 
 
 ;Keep it moving
-Keep it moving
+Ɓeydo dillude
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+Heɓ Firefox » <b>mo Android</b>
 
 
 ;Keep it going
-Keep it going
+Ɓeydo moylude
 
 
 ;Join Mozilla
-Join Mozilla
+Yantu e Mozilla
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
+Roboo Android oo tummbitaa ko e golle cosaaɗe ɗe <a href="%s">Google wostondiri</a> tee huutoraa ko e sarɗiiji cifaaɗi e <a href="%s">Jamirol Beeɗgol Creative Commons 3.0</a>.
 
 
