--- a/ff/firefoxtesting.lang
+++ b/ff/firefoxtesting.lang
@@ -7,7 +7,7 @@ Aawto Firefox Betaa mo Biro - Alla meho
 
 
 ;Download and test Firefox future releases. Experience the newest innovations with the Aurora or Beta builds.
-Aawto ngam ƴeewndaade  jame Firefox payɗe bayyineede. Ƴeewndo fannuuji ɓurɗi hesɗude huutoraade jame Aurora walla Betaa.
+Aawto ngam ƴeewndaade jame Firefox payɗe bayyineede. Ƴeewndo fannuuji ɓurɗi hesɗude huutoraade jame Aurora walla Betaa.
 
 
 ;Firefox Beta
@@ -23,7 +23,7 @@ Firefox Betaa mo Cinndel
 
 
 ;Download Beta and be part of the next version of Firefox.
-Aawto Betaa ngam jeyeede e yamere Firefox aroore.
+Aawto Betaa ngam jeyeede e yamre Firefox aroore.
 
 
 ;1. Test Features
@@ -35,7 +35,7 @@ Aawto Betaa ngam jeyeede e yamere Firefox aroore.
 
 
 ;2. Refine &amp; Polish
-2. Yuɓɓitin &amp; Teelto
+2. Juɓɓitingol &amp; Teelto
 
 
 ;File bugs to help us put the final tweaks on performance and functionality in a stable environment.
