Bug 760534 - [pt-PT] Translate Whats New page for Firefox 13 + vido
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106100 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/pt-PT/whatsnew.lang
+++ b/pt-PT/whatsnew.lang
@@ -2,62 +2,62 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+Viva! O seu Firefox está atualizado.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+O seu Firefox está desatualizado.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+Por motivos de segurança, recomendamos que atualize para a <a href="{url}">versão mais recente e melhor</a>.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+Está a executar uma versão desconhecida do Firefox.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+Por motivos de segurança, recomendamos que transfira a <a href="{url}">versão mais recente e melhor</a>.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+Obtenha a sua próxima tarefa<br/>mais rapidamente do que nunca
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+Veja como as novas funcionalidades do Firefox o ajudam a navegar mais rápido e com maior eficiência.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+Saiba mais sobre a <a href="{url}">funcionalidade Novo separador »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+Saiba mais sobre a nossa <a href="{url}">renovada página iniciar »</a>
 
 
 ;Keep in touch
-Keep in touch
+Mantenha-se em contato
 
 
 ;Keep it moving
-Keep it moving
+Mantenha-se em movimento
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+Obtenha o Firefox » <b>para Android</b>
 
 
 ;Keep it going
-Keep it going
+Mantenha-se em movimento
 
 
 ;Join Mozilla
-Join Mozilla
+Junte-se à Mozilla
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
+O Robo Android foi reproduzido a partir do trabalho criado e <a href="%s">partilhado da Google</a> e utilizado de acordo com os termos descritos no <a href="%s">Creative Commons 3.0 Attribution License</a>.
 
 
