--- a/pt-PT/videos/video_fx13.lang
+++ b/pt-PT/videos/video_fx13.lang
@@ -1,42 +1,42 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[O que há de novo no Firefox] Agora é mais fácil e mais rápido chegar onde quer ir com o mais recente Firefox.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+Com a página inicial redesenhada, você pode aceder e navegar facilmente até às opções de menu mais utilizadas.
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+Como transferências, marcadores, histórico, extras, sync e configurações.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[Novo separador] Nós também adicionámos melhorias à sua página de novo separador.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+Com o novo separador pode navegar facilmente para os seus sítios mais recentes e frequentemente visitados com um clique.
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+Para começar a utilizar um novo separador, crie um novo separador clicando no '+' no topo do seu navegador.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+O novo separador irá mostrar miniaturas dos sítios web visitados mais recentemente e frequentemente a partir do histórico da barra fantástica.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+Pode personalizar o novo separador arrastando as miniaturas para alterar a ordem.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+Clique no pino para bloquear o sítio no lugar, ou o botão 'X' para remover um sítip.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+Pode também clicar no ícone 'grelha' no canto superior direito da página para voltar ao novo separador em branco.
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+Obtenha o último Firefox agora e comece a usar hoje estas novas funcionalidades!
