l10n: misspelled firefox button fixed (bug 762637)
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106107 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/pt-BR/mozorg/contribute.lang
+++ b/pt-BR/mozorg/contribute.lang
@@ -73,7 +73,7 @@ Saiba mais sobre como <a href="https://support.mozilla.com/kb/superheroes-wanted
 ;Find out more about <a href="https://support.mozilla.org/kb/superheroes-wanted">supporting Firefox</a> and <a href="http://support.mozillamessaging.com/en-US/kb/superheroes-wanted">Thunderbird</a> users.
 Saiba mais sobre como apoiar usuários do <a href="https://support.mozilla.com/kb/superheroes-wanted">Firefox</a> e <a href="http://support.mozillamessaging.com/en-US/kb/superheroes-wanted">Thunderbird</a>.
 
-;You can also join our <a href="https://support.mozilla.com/army-of-awesome">Army of Awesome</a> by helping users on Twitter.
+;You can also join our <a href="https://support.mozilla.org/army-of-awesome">Army of Awesome</a> by helping users on Twitter.
 Você também pode unir-se ao nosso <a href="https://support.mozilla.com/army-of-awesome">Exército de Incríveis</a> ajudando usuários pelo Twitter.
 
 ;Quality Assurance
