--- a/pt-BR/whatsnew.lang
+++ b/pt-BR/whatsnew.lang
@@ -34,7 +34,7 @@ Mantenha contato
 Mantenha-se em movimento
 
 ;Get Firefox » <b>for Android</b>
-Baixe o Fireofx » <b>para Android</b>
+Baixe o Firefox » <b>para Android</b>
 
 ;Keep it going
 Mantenha o entusiasmo
