l10n: id, update newsletter strings
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106118 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/id/newsletter.lang
+++ b/id/newsletter.lang
@@ -70,11 +70,11 @@ Format {ok}
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+Semuanya Siap!  <span>Satu Lagi</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+Ingin dapat informasi paling relevan? Beritahu kami sedikit lebih jauh tentang Anda. Sementara Anda di sini, berlanggananlah berita Mozilla lainnya.
 
 
 ;Firefox & You
@@ -82,19 +82,19 @@ Firefox & You
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+Nawala kami lainnya:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+Dapatkan saran dan trik terbaru untuk memaksimalkan penggunaan peramban favorit Anda.
 
 
 ;Firefox Mobile
-Firefox Mobile
+Firefox Mobile {ok}
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+Pelajari tentang pengaya dan fitur keren tentang Firefox Mobile.
 
 
 ;Beta News
@@ -106,11 +106,11 @@ Read about the latest features for Firefox desktop and mobile before the final r
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+Ayo Berteman!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefox juga hadir di situs jejaring sosial favorit Anda. Yuk, terhubung, dan bergabung dalam percakapan.
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
@@ -138,7 +138,7 @@ Save Preferences
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+Terima kasih telah memperbarui preferensi surel Anda.
 
 
 ;You've been unsubscribed.
