[id] update newsletter.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106184 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/id/newsletter.lang
+++ b/id/newsletter.lang
@@ -62,7 +62,7 @@ Baca selengkapnya di <span>nawala</span> kami
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+Langganan nawala Anda telah dikonfirmasi.
 
 
 ;Format
@@ -78,7 +78,7 @@ Ingin dapat informasi paling relevan? Beritahu kami sedikit lebih jauh tentang A
 
 
 ;Firefox & You
-Firefox & You
+Firefox & Anda
 
 
 ;Our Other Newsletters:
@@ -94,15 +94,15 @@ Firefox Mobile {ok}
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Pelajari tentang pengaya dan fitur keren tentang Firefox Mobile.
+Pelajari tentang pengaya dan fitur keren tentang Firefox seluler.
 
 
 ;Beta News
-Beta News
+Berita Beta
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+Baca tentang fitur terbaru Firefox versi desktop dan mobile, sebelum dirilis.
 
 
 ;Let’s Be Friends!
@@ -110,31 +110,31 @@ Ayo Berteman!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox juga hadir di situs jejaring sosial favorit Anda. Yuk, terhubung, dan bergabung dalam percakapan.
+Firefox juga hadir di situs jejaring sosial favorit Anda. Yuk, terhubung, dan bergabung dalam percakapan!
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+Kelola <span>Langganan Nawala</span> Anda
 
 
 ;Subscribe
-Subscribe
+Berlangganan
 
 
 ;Unsubscribe
-Unsubscribe
+Berhenti Berlangganan
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+Centang di sini jika tidak ingin lagi menerima semua email dari Mozilla
 
 
 ;Remove me from all Mozilla emails
-Remove me from all Mozilla emails
+Hapus email saya dari semua email Mozilla
 
 
 ;Save Preferences
-Save Preferences
+Simpan Preferensi
 
 
 ;Thanks for updating your email preferences.
@@ -142,54 +142,54 @@ Terima kasih telah memperbarui preferensi surel Anda.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+Langganan Anda telah dihentikan.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+Sayang sekali Anda pergi. Sudikah menjawab beberapa pertanyaan kami sebelum mengangkat kaki?
 
 
 ;You send too many emails.
-You send too many emails.
+Kiriman emailnya terlalu banyak.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+Kontennya tidak penting.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+Desain emailnya terlalu susah untuk dibaca.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+Saya tidak pernah mendaftar untuk berlangganan.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+Cukup terhubung dengan Mozilla lewat Facebook dan Twitter saja.
 
 
 ;Submit
-Submit
+Kirim
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+Terima kasih atas perhatian Anda.
 
 
 ;Mozilla Newsletters
-Mozilla Newsletters
+Nawala Mozilla
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Thanks! Please check your inbox to confirm your subscription.
+Terima kasih! Silakan periksa email masuk Anda tentang konfirmasi langganan kami.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+Anda akan menerima email dari mozilla@e.mozilla.org yang ditujukan untuk mengonfirmasikan langganan Anda. Jika emailnya tidak terlihat, periksa folder spam juga. Anda harus mengonfirmasikan langganan sebelum dapat menerima nawala kami.
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
+Pastikan menambahkan alamat email pengirim dari kami: mozilla@e.mozilla.org ke buku alamat Anda agar emailnya dapat langsung masuk ke kotak masuk.
 
 
