Bug 760504 - [he] Translate Whats New page for Firefox 13 + vido
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106191 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/he/newsletter.lang
+++ b/he/newsletter.lang
@@ -62,7 +62,7 @@
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+אושר הרישום שלך לניוזלטר.
 
 
 ;Format
@@ -70,11 +70,11 @@ Your newsletter subscription has been confirmed.
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+סיימנו! <span>חכו רגע, יש עוד</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+רוצים לקבל מידע רלוונטי ביותר? בבקשה ספרו לנו קצת עצמכם. ואם אתם כבר כאן, באפשרותכם להירשם לערוצי עדכונים נוספים.
 
 
 ;Firefox & You
@@ -82,11 +82,11 @@ Firefox & You
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+ניוזלטרים אחרים שלנו:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+קבלת טיפים וטריקים כדי להוציא את המירב מהדפדפן המועדף עליך.
 
 
 ;Firefox Mobile
@@ -94,102 +94,101 @@ Firefox Mobile
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+למדו עוד על התוספות החמות ותכונות עבור Firefox לנייד.
 
 
 ;Beta News
-Beta News
+חדשות בטא
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+קראו על התכונות החדשות ב־Firefox עבור המחשב והנייד לפני שהן מגיעות לגרסה הסופית.
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+בואו נהיה חברים!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefox נמצא גם באתרי הרשתות החברתיות. התחברו אלינו והצטרפו לשיחה.
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+ניהול <span>הרשמה לניוזלטרים</span>
 
 
 ;Subscribe
-Subscribe
+הרשמה
 
 
 ;Unsubscribe
-Unsubscribe
+הסרת רישום
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+נא לסמן כאן אם ברצונך להימחק מכל הודעות הדואר האלקטרוני מאת Mozilla
 
 
 ;Remove me from all Mozilla emails
-Remove me from all Mozilla emails
+מחקו אותי מכל הודעות הדואר האלקטרוני מאת Mozilla
 
 
 ;Save Preferences
-Save Preferences
+שמירת העדפות
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+תודה על עדכון העדפות הדואר האלקטרוני שלך.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+רישומך הוסר בהצלחה.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+אנו מצטערים שבחרת לעזוב. אפשר בבקשה לדעת למה בחרת לעזוב?
 
 
 ;You send too many emails.
-You send too many emails.
+אתם שולחים הרבה יותר מידי הודעות דואר אלקטרוני.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+התוכן אינו מעניין אותי.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+עיצוב ההודעות היה קשה מידי לקריאה.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+לא נרשמתי לזה.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+אני במעקב אחרי Mozilla ב־Facebook ו־Twitter במקום.
 
 
 ;Submit
-Submit
+שליחה
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+תודה שסיפרת לנו למה בחרת לעזוב.
 
 
 ;Mozilla Newsletters
-Mozilla Newsletters
+ניוזלטרים של Mozilla
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Thanks! Please check your inbox to confirm your subscription.
+תודה! בבקשה לבדוק את תיבת הדואר הנכנס כדי לאשר את הרישום.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-
+מיד תתקבל הודעה מאת mozilla@e.mozilla.org כדי לאשר את הרישום. אם אינך רואה הודעה זו, יש לבדוק את מסנן דואר הזבל שלך.
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
+כדאי להוסיף את כתובת השליחה שלנו: mozilla@e.mozilla.org לספר הכתובות שלכם כדי לוודא שאנחנו תמיד נצליח להגיע אל תיבת הדואר הנכנס שלכם.
 
 
