--- a/he/snippets.lang
+++ b/he/snippets.lang
@@ -118,14 +118,13 @@ Firefox לאנדרואיד עכשיו מותאם היטב לדרך שבה אתם
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-
+משתמשים ב־Firefox במספר מחשבים? מעתה תוכלו לסנכרן את התוספות שלכם בין כל המחשבים. <a href="%">מידע נוסף אודות פעולת הסנכרון.</a>
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+מהירות, מהירות, מהירות. <a %s>Firefox עבור Android זכה לשדרוג מסיבי</a>. עזרו לנו להפיץ את הבשורה.
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox כולל תכונות חדשות שיאפשרו לך לסיים את המשימה הבאה אפילו מהר יותר! <a href="%">צפו בווידאו למידע נוסף.</a>
 
 
