--- a/he/videos/video_fx13.lang
+++ b/he/videos/video_fx13.lang
@@ -1,42 +1,42 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[מה חדש ב־Firefox] מעתה פשוט ומהיר יותר להגיע ליעדך עם הגרסה החדשה של Firefox.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+עם העיצוב מחדש של דף הבית ניתן לגשת בקלות ולנווט לאפשרויות התפריט הנפוצות ביותר.
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+כמו הורדות, סימניות, היסטוריה, תוספות, סנכרון והגדרות.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[דף לשונית חדשה] ביצענו גם שיפורים לדף הלשונית החדשה.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+דרך דף הלשונית החדשה  ניתן לנווט בקלות לאתרים האחרונים ואלו שביקרת בהם באופן תדיר בלחיצה אחת בודדת.
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+כדי להתחיל להשתמש בדף הלשונית החדשה, יש ליצור לשונית חדשה באמצעות לחיצה על הסימן '+' בחלקו העליון של הדפדפן.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+דף הלשונית החדשה יציג כעת תמונות ממוזערות של האתרים בהם ביקרת לאחרונה ובאופן תדיר מהיסטורית הגלישה שלך.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+ניתן לבצע התאמה אישית לדף הלשונית החדשה באמצעות גרירה של תמונות ממוזערות כדי לשנות את הסדר.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+ניתן ללחוץ על הנעץ כדי לנעול אתר במיקום, או ללחוץ על הכפתור עם הסימן 'X' כדי להסיר אתר.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+ניתן ללחוץ על צלמית הרשת שממוקמת בפינה השמאלית או הימנית של הדף כדי לחזור לדף ריק בפתיחת לשונית חדשה. 
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+הורידו את הגרסה החדשה של Firefox כעת והתחילו להשתמש בתכונות החדשות עוד היום!
