--- a/he/whatsnew.lang
+++ b/he/whatsnew.lang
@@ -2,62 +2,60 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+הידד! דפדפן Firefox שברשותך עדכני.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+דפדפן Firefox שברשותך אינו עדכני.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+מטעמי אבטחה, אנו ממליצים לשדרג <a href="{url}">לגרסה החדשה ביותר</a>.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+הינכם משתמשים בגרסה לא ידועה של Firefox.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+מטעמי אבטחה, אנו ממליצים להוריד את <a href="{url}">הגרסה החדשה ביותר</a>.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+בצעו את המשימה הבאה שלכם<br/>מהר יותר מבעבר
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+ראו כיצד התכונות החדשות של Firefox מסייעות לכם לגלוש מהר יותר וביעילות. 
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+מידע נוסף על <a href="{url}">תכונת הלשונית החדשה »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+מידע נוסף על <a href="{url}">העיצוב מחדש של דף הבית »</a>
 
 
 ;Keep in touch
-Keep in touch
+שמרו על קשר
 
 
 ;Keep it moving
-Keep it moving
+קחו אותו איתכם
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+קבלת Firefox » <b>עבור Android</b>
 
 
 ;Keep it going
-Keep it going
+העבירו את זה הלאה
 
 
 ;Join Mozilla
-Join Mozilla
+הצטרפו ל־Mozilla
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-
-
+הרובוט של Android נגזר  מעבודה שנוצרה <a href="%s">ושותפה על־ידי Google</a> ונעשה בה שימוש בהתאם להנחיות שמתוארות ב<a href="%s">רישיון Creative Commons ייחוס 3.0</a>.
