--- a/hu/videos/video_fx13.lang
+++ b/hu/videos/video_fx13.lang
@@ -1,42 +1,39 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[A Firefox újdonságai] Mostantól gyorsabban és könnyebben juthat el céljához a legújabb Firefox böngészővel.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+Az újratervezett Kezdőlap segítségével könnyebben érheti el és használhatja a leggyakrabban használt menüpontokat.
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+Amilyen a letöltések, könyvjelzők, előzmények, kiegészítők, szinkronizáció és a beállítások.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[Új lap oldal] Ugyanakkor továbbfejlesztettük az új lap oldalt is.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+Az Új lap oldal használatával könnyedén, egyetlen kattintással lehet navigálni a legutóbb és leggyakrabban használt weboldalak között. 
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+Az Új lap oldal használatához a böngésző tetején található '+' jelre kell csak kattintani.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-
+Az Új lap oldal mostantól előképeket jelenít meg a legutóbb és leggyakrabban használt weboldalakról az Intelligens címsor előzményeinek segítségével.
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
-
+Az Új lap oldal testreszabható az előképek rendezésével.
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+Kattintson a kitűzőre ha egy oldalt az adott helyhez akarja kötni, vagy az 'X' gombot, ha el akarja onnan távolítani.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-
+A jobb felső sarokban található 'rács' ikonra kattintva visszaválthat az üres új lap oldalra.
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+Töltse le a legfrissebb Firefoxot és kezdje el használni a legújabb funkciókat!
