--- a/hu/whatsnew.lang
+++ b/hu/whatsnew.lang
@@ -2,62 +2,62 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+Hurrá! A legújabb Firefox böngészőt használja.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+Ez egy régebbi Firefox verzió.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+Biztonsági okokból, javasoljuk a <a href="{url}">legfrissebb verzió használatát</a>.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+Ismeretlen Firefox verziót futtat.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+Biztonsági okokból, javasoljuk a <a href="{url}">legfrissebb verzió letöltését</a>.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+Kezdjen neki a következő feladatának<br/>gyorsabban, mint valaha
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+Nézze meg, hogy az új funkciók hogyan segítenek a gyorsabb és hatékonyabb internetezésben.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+Ismerje meg az <a href="{url}"Új lap funkciót »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+Ismerje meg az <a href="{url}">újratervezett kezdőoldalt »</a>
 
 
 ;Keep in touch
-Keep in touch
+Tartsuk a kapcsolatot
 
 
 ;Keep it moving
-Keep it moving
+Tartsuk mozgásban
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+Firefox letöltése » <b>Androidra</b>
 
 
 ;Keep it going
-Keep it going
+Tartsuk működésben
 
 
 ;Join Mozilla
-Join Mozilla
+Csatlakozzon a Mozillához
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
+Az Android Robot Google által készített és <a href="%s">megosztott</a> munka reprodukciója a <a href="%s">Creative Commons 3.0 Attribution License</a> által megfogalmazott kifejezések értelmében.
 
 
