--- a/hu/mobile.lang
+++ b/hu/mobile.lang
@@ -2,27 +2,27 @@
 
 
 ;Get Firefox for Android
-Get Firefox for Android
+Firefox for Android letöltése
 
 
 ;Download for <span>Android</span>
-Download for <span>Android</span>
+Letöltés <span>Androidra</span>
 
 
 ;Free from the Android Market
-Free from the Android Market
+Ingyenes a Google Play-en
 
 
 ;Or visit <a %s>Firefox.com/m</a> on your phone.
-Or visit <a %s>Firefox.com/m</a> on your phone.
+Vagy látogassa meg a <a %s>Firefox.com/m</a> weboldalt a telefonján.
 
 
 ;Supported Devices
-Supported Devices
+Támogatott eszközök
 
 
 ;Get it from iTunes - FREE
-Get it from iTunes - FREE
+Letöltés iTunes-ról - Ingyenes
 
 
 ;Firefox Home for <span>iPhone</span>
@@ -30,102 +30,101 @@ Firefox Home for <span>iPhone</span>
 
 
 ;Access your Firefox history, bookmarks and open tabs on your iPhone.
-Access your Firefox history, bookmarks and open tabs on your iPhone.
+Használja a Firefox előzményeket, könyvjelzőket és nyitott lapokat az iPhone-on.
 
 
 ;Download Firefox to <span>Your Mobile</span>
-Download Firefox to <span>Your Mobile</span>
+Firefox letöltése <span>Mobilra</span>
 
 
 ;Want to test the latest features?
-Want to test the latest features?
+Ki szeretné próbálni a legújabb funkciókat?
 
 
 ;Get Firefox Home for iPhone
-Get Firefox Home for iPhone
+Firefox Home for iPhone
 
 
 ;Download Beta for Android
-Download Beta for Android
+Beta letöltése Androidra
 
 
 ;Download
-Download
+Letöltés
 
 
 ;for
-for
+
 
 
 ;Free from iTunes
-Free from iTunes
+Ingyenes az iTunes-ról
 
 
 ;You’ll get to experience cutting-edge features and provide feedback to help refine and polish what will be in the final release.
-You’ll get to experience cutting-edge features and provide feedback to help refine and polish what will be in the final release.
+Megismerheti a legújabb funkciókat és visszajelzése segítségével finomhangolhatjuk a végleges kiadást.
 
 
 ;Developer Tools
-Developer Tools
+Fejlesztői eszközök
 
 
 ;You can install the mobile version of Firefox to our desktop computer in order to test, provide feedback, and build add-ons.
-You can install the mobile version of Firefox to our desktop computer in order to test, provide feedback, and build add-ons.
+Feltelepítheti a Firefox mobil verzióját a számítógépére is, hogy tesztelje, visszajelzést küldjön, vagy fejlesszen hozzá.
 
 
 ;Connect With Firefox for Mobile:
-Connect With Firefox for Mobile:
+Kapcsolódás Firefox for Mobile-lal:
 
 
 ;Monthly newsletter
-Monthly newsletter
+Havi hírlevél
 
 
 ;Follow us
-Follow us
+Kövessen minket
 
 
 ;Become a fan
-Become a fan
+Legyen rajongó
 
 
 ;Firefox is full of innovations that let you type less, browse more and get to the Web quickly and easily.
-Firefox is full of innovations that let you type less, browse more and get to the Web quickly and easily.
-
+A Firefox olyan innovációkat tartalmaz, amelynek használata során kevesebbet kell gépelnie és többet böngésznie, így gyorsabban és egyszerűbben internetezhet.
 
 ;Freedom from typing
-Freedom from typing
+Elszabadulás a gépeléstől
 
 
 ;The Awesome Screen learns your favorite sites so you can browse with little or no typing.
-The Awesome Screen learns your favorite sites so you can browse with little or no typing.
+Az Intelligens képernyő megtanulja kedvenc oldalait, így kevés gépeléssel vagy gépelés nélkül internetezhet. 
 
 
 ;Best of both worlds
-Best of both worlds
+Mindenből a legjobb
 
 
 ;Firefox for Android is now redesigned and optimized for the way you browse on phones and tablets.
-Firefox for Android is now redesigned and optimized for the way you browse on phones and tablets.
+A Firefox for Android újratervezett és böngészésre optimalizált telefonokon és táblagépeken egyaránt.
 
 
 ;Browse quick and easy
-Browse quick and easy
+Gyors és könnyű böngészés
 
 
 ;Features like Sync, tabbed browsing and one-touch bookmarking mean everything you want is close at hand.
-Features like Sync, tabbed browsing and one-touch bookmarking mean everything you want is close at hand.
+Az olyan funkciók, mint a Sync, a lapkezelés és a gyors könyvjelzőkezelés már csak egyetlen érintésre vannak.
 
 
 ;<a %s>Need help?</a> Visit our Firefox for Android Support site.
-<a %s>Need help?</a> Visit our Firefox for Android Support site.
+<a %s>Segítségre van szüksége?</a> Látogasson el a Firefox for Android támogatói oldalra.
 
 
 ;Download and test the build that’s right for you.
-Download and test the build that’s right for you.
+Töltse le és próbálja ki a legmegfelelőbb verziót.
 
 
 ;See all our channels for mobile »
-See all our channels for mobile »
+Összes csatorna a mobil eszközhöz »
 
 
