--- a/hu/snippets.lang
+++ b/hu/snippets.lang
@@ -126,6 +126,6 @@ Gyorsan, gyorsan, gyorsan. Most jött ki a <a %s>Firefox for Android legfrissebb
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+A Firefox új funkciójával még gyorsabban lehet a következő feladatra váltani! <a href="%">Nézze meg erről a videót!</a>
 
 
