l10n: pa-IN, whatsnew page, Translation by Amanpreet
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106241 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/pa-IN/videos/video_fx13.lang
+++ b/pa-IN/videos/video_fx13.lang
@@ -1,42 +1,42 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[ਫਾਇਰਫਾਕਸ ਵਿੱਚ ਨਵਾਂ] ਫਾਇਰਫਾਕਸ ਦੇ ਸਭ ਤੋਂ ਨਵੇਂ ਵਰਜਨ ਨਾਲ ਤੁਹਾਨੂੰ ਉੱਥੇ ਜਾਣਾ, ਜਿੱਥੇ ਤੁਸੀਂ ਜਾਣਾ ਚਾਹੁੰਦੇ ਹੋ, ਹੋਰ ਵੀ ਸੌਖਾ ਅਤੇ ਤੇਜ਼ ਹੋ ਗਿਆ ਹੈ।
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+ਮੁੜ-ਡਿਜ਼ਾਇਨ ਕੀਤੇ ਮੁੱਖ ਸਫ਼ੇ ਨਾਲ ਤੁਸੀਂ ਸਭ ਤੋਂ ਵੱਧ ਵਰਤੀਆਂ ਜਾਂਦੀਆਂ ਮੇਨੂ ਚੋਣਾਂ ਨੂੰ ਸੌਖੀ ਤਰ੍ਹਾਂ ਵਰਤ ਸਕਦੇ ਹੋ ਅਤੇ ਉਹਨਾਂ ਵਿੱਚ ਜਾ ਆ ਸਕਦੇ ਹੋ।
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+ਜਿਵੇਂ ਕਿ ਡਾਊਨਲੋਡ, ਬੁੱਕਮਾਰਕ, ਅਤੀਤ, ਐਡ-ਆਨ, ਸਿੰਕ ਅਤੇ ਸੈਟਿੰਗ।
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[ਨਵਾਂ ਟੈਬ ਪੇਜ਼] ਅਸੀਂ ਤੁਹਾਡੇ ਨਵੇਂ ਟੈਬ ਪੇਜ਼ ਲਈ ਵੀ ਕਈ ਸੁਧਾਰ ਸ਼ਾਮਿਲ ਕੀਤੇ ਹਨ।
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+ਨਵੇਂ ਟੈਬ ਪੇਜ਼ ਨਾਲ, ਤੁਸੀਂ ਸੌਖੀ ਤਰ੍ਹਾਂ ਆਪਣੇ ਵਲੋਂ ਤਾਜ਼ਾ ਖੋਲ੍ਹੀਆਂ ਅਤੇ ਆਮ ਤੌਰ ਉੱਤੇ ਖੋਲ੍ਹੀਆਂ ਸਾਇਟਾਂ ਨੂੰ ਇੱਕ ਕਲਿੱਕ ਨਾਲ ਖੋਲ੍ਹ ਸਕਦੇ ਹੋ।
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+ਨਵੇਂ ਟੈਬ ਪੇਜ਼ ਦੀ ਵਰਤੋਂ ਸ਼ੁਰੂ ਕਰਨ ਲਈ, ਆਪਣੇ ਬਰਾਊਜ਼ਰ ਦੇ ਉੱਤੇ '+' ਨੂੰ ਕਲਿੱਕ ਕਰਕੇ ਨਵੀਂ ਟੈਬ ਬਣਾਉ।
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+ਨਵਾਂ ਟੈਬ ਪੇਜ਼ ਨੂੰ ਤੁਹਾਡੇ ਬੇਨਜ਼ੀਰ ਪੱਤੀ ਅਤੀਤ ਤੋਂ ਤੁਹਾਡੇ ਵਲੋਂ ਤਾਜ਼ਾ ਖੋਲ੍ਹੀਆਂ ਅਤੇ ਆਮ ਤੌਰ ਉੱਤੇ ਵਰਤੀਆਂ ਵੈੱਬਸਾਇਟਾਂ ਲਈ ਥੰਮਨੇਲ ਵਜੋਂ ਵੇਖਾਇਆ ਜਾਵੇਗਾ।
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+ਤੁਸੀਂ ਆਪਣੇ ਨਵੇਂ ਟੈਬ ਪੇਜ਼ ਵਿੱਚ ਥੰਮਨੇਲ ਨੂੰ ਅੱਗੇ-ਪਿੱਛੇ ਰੱਖਣ ਕੇ ਆਪਣੀ ਲੋੜ ਮੁਤਾਬਕ ਬਦਲ ਵੀ ਸਕਦੇ ਹੋ।
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+ਸਾਇਟ ਨੂੰ ਕਿਸੇ ਥਾਂ ਉੱਤੇ ਪੱਕਾ ਕਰਨ ਲਈ ਪਿੰਨ ਉੱਤੇ ਕਲਿੱਕ ਕਰੋ ਜਾਂ ਸਾਇਟ ਨੂੰ ਬੰਦ ਕਰਨ ਲਈ 'X' ਬਟਨ ਨੂੰ ਦੱਬੋ।
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+ਤੁਸੀਂ ਖਾਲੀ ਟੈਬ ਪੇਜ਼ ਉੱਤੇ ਵਾਪਸ ਜਾਣ ਲਈ ਪੇਜ਼ ਦੇ ਸੱਜੇ ਪਾਸੇ ਉੱਤੇ 'ਗਰਿੱਡ' ਆਈਕਾਨ ਨੂੰ ਕਲਿੱਕ ਕਰ ਸਕਦੇ ਹੋ।
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+ਹੁਣੇ ਨਵਾਂ ਫਾਇਰਫਾਕਸ ਲਵੋ ਅਤੇ ਇਹ ਨਵੇਂ ਫੀਚਰਾਂ ਨੂੰ ਅੱਜ ਹੀ ਵਰਤਣਾ ਸ਼ੁਰੂ ਕਰੋ!
