--- a/pa-IN/whatsnew.lang
+++ b/pa-IN/whatsnew.lang
@@ -2,62 +2,63 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+ਬੱਲੇ ਬੱਲੇ! ਤੁਹਾਡਾ ਫਾਇਰਫਾਕਸ ਅੱਪ-ਟੂ-ਡੇਟ ਹੈ।
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+ਤੁਹਾਡਾ ਫਾਇਰਫਾਕਸ ਪੁਰਾਣਾ ਹੈ।
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+ਸੁਰੱਖਿਆ ਕਾਰਨਾਂ ਕਰਕੇ, ਅਸੀਂ ਸਿਫਾਰਸ਼ ਕਰਦੇ ਹਾਂ ਕਿ <a href="{url}">ਸਭ ਤੋਂ ਨਵੇਂ ਅਤੇ ਸਭ ਤੋਂ ਵਧੀਆ ਵਰਜਨ</a> ਲਈ ਅੱਪਗਰੇਡ ਕਰੋ।
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+ਤੁਸੀਂ ਫਾਇਰਫਾਕਸ ਦਾ ਅਣਜਾਣ ਵਰਜਨ ਚਲਾ ਰਹੇ ਹੋ।.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+ਸੁਰੱਖਿਆ ਕਾਰਨਾਂ ਕਰਕੇ, ਅਸੀਂ <a href="{url}">ਸਭ ਤੋਂ ਨਵੇਂ ਅਤੇ ਸਭ ਤੋਂ ਵਧੀਆ ਵਰਜਨ</a> ਨੂੰ ਡਾਊਨਲੋਡ ਕਰਨ ਦੀ ਸਿਫਾਰਸ਼ ਕਰਦੇ
+ਹਾਂ।
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+ਆਪਣਾ ਅਗਲਾ ਕੰਮ ਉੱਤੇ ਜਾਓ<br/>ਪਹਿਲਾਂ ਤੋਂ ਵੀ ਤੇਜ਼
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+ਵੇਖੋ ਕਿ ਫਾਇਰਫਾਕਸ ਦੇ ਨਵੇਂ ਫੀਚਰ ਤੁਹਾਨੂੰ ਤੇਜ਼ ਅਤੇ ਵੱਧ ਕਾਰਗੁਜ਼ਾਰੀ ਨਾਲ ਬਰਾਊਜ਼ ਕਰਨ ਵਿੱਚ ਕਿਵੇਂ ਮੱਦਦ ਕਰਦੇ ਹਨ।
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+<a href="{url}">ਨਵੇਂ ਟੈਬ ਫੀਚਰ »</a> ਬਾਰੇ ਸਿੱਖੋ
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+ਸਾਡੇ <a href="{url}">ਮੁੜ-ਡਿਜ਼ਾਇਨ ਕੀਤੇ ਮੁੱਖ ਸਫ਼ੇ »</a> ਬਾਰੇ ਸਿੱਖੋ
 
 
 ;Keep in touch
-Keep in touch
+ਸੰਪਰਕ ਵਿੱਚ ਰਹੋ
 
 
 ;Keep it moving
-Keep it moving
+ਇਸ ਨੂੰ ਜਾਰੀ ਰੱਖੋ
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+ਫਾਇਰਫਾਕਸ ਲਵੋ » <b>ਐਡਰਾਇਡ ਲਈ</b>
 
 
 ;Keep it going
-Keep it going
+ਇਹ ਜਾਰੀ ਰੱਖੋ
 
 
 ;Join Mozilla
-Join Mozilla
+ਮੋਜ਼ੀਲਾ ਦਾ ਹਿੱਸਾ ਬਣੋ
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
+ਐਡਰਾਇਡ ਰੋਬੋਟ ਨੂੰ <a href="%s">ਗੂਗਲ ਵਲੋਂ ਸਾਂਝੇ ਕੀਤੇ</a> ਅਤੇ ਬਣਾਏ ਕੰਮ ਤੋਂ ਮੁੜ-ਤਿਆਰ ਕੀਤਾ ਗਿਆ ਸੀ ਅਤੇ ਇਸ ਨੂੰ <a href="%s">Creative Commons 3.0 Attribution License</a> ਦੀਆਂ ਸ਼ਰਤਾਂ ਅਧੀਨ ਵਰਤਿਆ ਜਾਂਦਾ ਹੈ।
 
 
